feat: agregada baseService para mejor manejo de funciones, optimización de código en todos los servicios y control de excepciones en baseService